<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6969EC"
    tools:context=".Schermata_Principale">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/log_out"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="540dp" />

    <Button
        android:id="@+id/Salute_buttom"
        android:layout_width="249dp"
        android:layout_height="98dp"
        android:background="#abec69"
        android:onClick="goto_Salute"
        android:text="@string/salute"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="316dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Scuola_button"
        android:layout_width="249dp"
        android:layout_height="98dp"
        android:background="#ec6969"
        android:onClick="goto_Scuola"
        android:text="@string/scuola"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="171dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/Logout_button"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:background="#ffffff"
        android:onClick="Logout"
        android:text="@string/logout"
        android:textColor="#6969EC"
        android:textSize="18dp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:ignore="UsingOnClickInXml"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="531dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>