<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6969EC"
    tools:context=".Activity_Salute">

    <include
        android:id="@+id/toolbar_salute"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Bstato_salute"
        android:layout_width="248dp"
        android:layout_height="70dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="48dp"
        android:background="#ffffff"
        android:onClick="goto_Sstato_salute"
        android:text="@string/stato_n_salute"
        android:textColor="#6969EC"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Bproblemi_apprendimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_salute" />

    <Button
        android:id="@+id/Bproblemi_apprendimento"
        android:layout_width="248dp"
        android:layout_height="70dp"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="48dp"
        android:background="#ffffff"
        android:textColor="#6969EC"
        android:onClick="goto_Papprendimento"
        android:text="@string/problemi_di_napprendimento"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Bmalattie_gravi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Bmalattie_gravi"
        android:layout_width="248dp"
        android:layout_height="70dp"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="82dp"
        android:background="#ffffff"
        android:textColor="#6969EC"
        android:onClick="goto_malattie_gravi"
        android:text="@string/malattie_n_gravi"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />


</androidx.constraintlayout.widget.ConstraintLayout>